[gd_scene load_steps=5 format=2]

[ext_resource path="res://MovementUI.gd" type="Script" id=1]
[ext_resource path="res://UI/Reset Button.png" type="Texture" id=2]
[ext_resource path="res://UI/Jump button.png" type="Texture" id=3]
[ext_resource path="res://UI/Arrow Button.png" type="Texture" id=4]

[node name="MovementUI" type="TouchScreenButton"]
position = Vector2( 16, 32 )
script = ExtResource( 1 )

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( 104, 152 )
scale = Vector2( -0.15, 0.15 )
normal = ExtResource( 4 )

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, 152 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 4 )

[node name="JumpButton" type="TouchScreenButton" parent="."]
position = Vector2( 384, 160 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 3 )

[node name="ResetButton" type="TouchScreenButton" parent="."]
position = Vector2( 384, 120 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_RightButton_released"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="released" from="LeftButton" to="." method="_on_LeftButton_released"]
[connection signal="pressed" from="JumpButton" to="." method="_on_JumpButton_pressed"]
[connection signal="released" from="JumpButton" to="." method="_on_JumpButton_released"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="released" from="ResetButton" to="." method="_on_ResetButton_released"]
